modules/demo-workloads/rancher-demo/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: rancher-demo
  namespace: default
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
    - hosts:
        - rancher-demo.k8s-demo.plgrnd.be
      secretName: rancher-demo-tls
  rules:
  - host: rancher-demo.k8s-demo.plgrnd.be
    http:
      paths:
      - backend:
          serviceName: rancher-demo
          servicePort: 80
        path: /
